--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
+    "body-parse": "^0.1.0",
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
     "emailjs": "^3.7.0",
     "express": "^4.17.1",
+    "js-md5": "^0.7.3",
     "jsonwebtoken": "^8.5.1",
     "mockjs": "^1.1.0",
     "multer": "^1.4.5-lts.1",
