--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "mockjs": "^1.1.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "nodejs-websocket": "^1.7.2"
+    "nodejs-websocket": "^1.7.2",
+    "silly-datetime": "^0.1.2"
   },
   "name": "serve",
   "version": "1.0.0",
