--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodejs-websocket": "^1.7.2",
+    "querystring": "^0.2.1",
     "silly-datetime": "^0.1.2",
     "socket.io": "^4.6.1"
   },
